# r6502

./: .gdbhist  .gitignore  .gitmodules  Cargo.toml  README.md
src/: emulator.rs  instructions.rs  lib.rs  main.rs  state.rs
src/emulator/: colors.rs  display.rs  instructions.rs  memory.rs  mod.rs  state.rs
tests/: integration_tests.rs  processor.rs
