[package]
name = "r6502"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bitflags = "2.4.2"
paste = "1.0.14"
sdl2 = { version="0.36.0", features=["bundled"] }
serde_json = "1.0.113"
tabled = "0.15.0"
